docs: fix overflow on codeblocks on mobile

--- a/website/src/app.css
+++ b/website/src/app.css
@@ -24,6 +24,7 @@ h3 {
 
 pre {
     @apply bg-gray-100 p-4 rounded mt-4;
+    overflow-x: auto;
 }
 
 code {
